--- a/YurtYonetim-UI/yurt-yonetim/src/app/layouts/main/main-home/main-home.component.html
+++ b/YurtYonetim-UI/yurt-yonetim/src/app/layouts/main/main-home/main-home.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<div class="content">
   <!-- Content Header (Page header) -->
   <div class="content-header">
     <div class="container-fluid">
