--- a/YurtYonetim-UI/yurt-yonetim/src/app/shared/layouts/dashboard-layout/side-bar/side-bar.component.html
+++ b/YurtYonetim-UI/yurt-yonetim/src/app/shared/layouts/dashboard-layout/side-bar/side-bar.component.html
@@ -1,80 +1,37 @@
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
-  <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
-    <img src="assets/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-    <span class="brand-text font-weight-light">YÖNETİM PANELİ</span>
-  </a>
-
-  <div class="sidebar">
-    <!-- Sidebar user panel (optional) -->
-    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-      <div class="image">
-        <img src="assets/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-      </div>
-      <div class="info">
-        <a href="#" class="d-block">Ad Soyad</a>
-      </div>
-    </div>
-  
-    <!-- SidebarSearch Form -->
-    <div class="form-inline">
-      <div class="input-group" data-widget="sidebar-search">
-        <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-        <div class="input-group-append">
-          <button class="btn btn-sidebar">
-            <i class="fas fa-search fa-fw"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-  
-    <!-- Sidebar Menu -->
-    <nav class="mt-2">
-      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-        <li class="nav-item">
-          <a href="pages/widgets.html" class="nav-link">
-            <i class="nav-icon fas fa-home"></i>
-            <p>
-              Ana Sayfa
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">
-            <i class="nav-icon far fa-copy"></i>
-            <p>
-              İdari İşler
-              <i class="fas fa-angle-left right"></i>
-            </p>
-          </a>
-          <ul class="nav nav-treeview">
-            <li class="nav-item">
-              <a href="#" class="nav-link">
-                <i class="far fa-user nav-icon"></i>
-                <p>
-                  Kullanıcı İşlemleri
-                  <i class="fas fa-angle-left right"></i>
-                </p>
-              </a>
-              <ul class="nav nav-treeview">
-                <li class="nav-item">
-                  <a href="idari-isler/tum-kullanicilar" class="nav-link">
-                    <i class="far fa-user nav-icon"></i>
-                    <p>Tüm Kullanıcılar</p>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="idari-isler/yeni-kullanici" class="nav-link">
-                    <i class="far fa-plus nav-icon"></i>
-                    <p>Yeni Kullanıcı</p>
-                  </a>
-                </li>             
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
+<nav class="menu-sidebar"
+  [ngClass]="{'mini-navbar': environment.isMiniNavbar, 'mobile': environment.isOpenMobileNavbar}">
+  <div class="top-header d-flex justify-content-between align-items-center pl-3">
+    <a [routerLink]="loginUser?.firstFireLink" class="logo">
+      <img *ngIf="logoImg" alt="Logo" class="py-2"
+        [src]="environment.api.contentRootPath + 'images/w_170/' + logoImg | safe: 'resourceUrl'">
+    </a>
+    <a class="toggle" (click)="checkMiniNavbar()"></a>
+    <button type="button" (click)="openMobileMenu()" class="btn btn btn-primary btn-circle btn-icon w-100 mobile-close">
+      <i class="fa fa-times" aria-hidden="true"></i>
+    </button>
   </div>
-</aside>
-<!-- /.sidebar-menu -->
+  <div class="element-search autosuggest-search-activator mx-md-1">
+    <input placeholder="Menüde ara..." #searchMenu type="text" (keyup)="search($event)">
+  </div>
+  <ng-template #recursiveList let-menus>
+    <ul>
+
+      <ng-container *ngFor="let menu of menus; trackBy: trackByFn">
+        <li class="child-menu"
+          [ngClass]="{'active': selectedMenuId.indexOf(menu.id) > -1 || searchMenu.value.length > 2}">
+          <a [ngClass]="{'has-arrow': menu.childs.length > 0, 'has-main': menu.icon}"
+            [attr.aria-expanded]="selectedMenuId.indexOf(menu.id) > -1 || searchMenu.value.length > 2"
+            [routerLink]="menu.childs.length > 0 ? null : menu.allRouterLink"
+            (click)="selectMenu(menu.id, menu.childs.length)">
+            <i class="{{menu.icon}}" *ngIf="menu.icon"></i>
+            <span>{{menu.name}}</span>
+          </a>
+          <ng-container *ngTemplateOutlet="recursiveList; context:{ $implicit: menu.childs }"></ng-container>
+        </li>
+      </ng-container>
+
+    </ul>
+  </ng-template>
+
+  <ng-container *ngTemplateOutlet="recursiveList; context:{ $implicit: visibleMenus }"></ng-container>
+</nav>
