--- a/YurtYonetim-UI/yurt-yonetim/src/app/modules/registration/kullanici-islemleri/tum-kullanicilar/tum-kullanicilar.component.html
+++ b/YurtYonetim-UI/yurt-yonetim/src/app/modules/registration/kullanici-islemleri/tum-kullanicilar/tum-kullanicilar.component.html
@@ -1,3 +1,15 @@
-<p>
-  tum-kullanicilar works!
-</p>
+<div class="content">
+  <section class="content">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="card-title">Tüm Kullanıcılar</h3>
+      </div>
+      <!-- /.card-header -->
+      <div class="card-body">
+        <div id="jsGrid1"></div>
+      </div>
+      <!-- /.card-body -->
+    </div>
+    <!-- /.card -->
+  </section>
+</div>
