genel düzenlemeler  yapıldı

--- a/YurtYonetim-UI/yurt-yonetim/src/app/modules/registration/kullanici-islemleri/tum-kullanicilar/tum-kullanicilar.component.html
+++ b/YurtYonetim-UI/yurt-yonetim/src/app/modules/registration/kullanici-islemleri/tum-kullanicilar/tum-kullanicilar.component.html
@@ -1,15 +1,14 @@
 <div class="content">
-  <section class="content">
-    <div class="card">
-      <div class="card-header">
-        <h3 class="card-title">Tüm Kullanıcılar</h3>
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="card card-primary">
+        <div class="card-header">
+          <h3 class="card-title">Tüm Kullanıcılar</h3>
+        </div>
+        <div class="card-body">
+          <div id="jsGrid1"></div>
+        </div>
       </div>
-      <!-- /.card-header -->
-      <div class="card-body">
-        <div id="jsGrid1"></div>
       </div>
-      <!-- /.card-body -->
-    </div>
-    <!-- /.card -->
   </section>
 </div>
