--- a/YurtYonetim-UI/yurt-yonetim/src/app/modules/registration/kullanici-islemleri/yeni-kullanici/yeni-kullanici.component.html
+++ b/YurtYonetim-UI/yurt-yonetim/src/app/modules/registration/kullanici-islemleri/yeni-kullanici/yeni-kullanici.component.html
@@ -1,3 +1,60 @@
-<p>
-  yeni-kullanici works!
-</p>
+<div class="content">
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="card card-primary">
+        <div class="card-header">
+          <h3 class="card-title">Kullanıcı Ekle/Güncelle</h3>
+        </div>
+        <div class="card-body">
+          <form id="quickForm"  [formGroup]="userForm">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="exampleInputName">Ad *</label>
+                    <input type="text" name="name" required class="form-control" formControlName="name"  [(ngModel)]="user.name" id="exampleInputName" placeholder="İsim Giriniz">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="exampleInputSurname">Soyad *</label>
+                    <input type="text" name="surname" required class="form-control" formControlName="surname" id="exampleInputSurname" placeholder="Soyisim Giriniz">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="exampleInputPhone">Telefon Numarası *</label>
+                    <input type="phone" name="surname" required class="form-control"  formControlName="phoneNumber" id="exampleInputPhone" placeholder="Telefon Giriniz">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="exampleInputEmail1">Mail Adresi *</label>
+                    <input type="email" name="email" required class="form-control" formControlName="email"  [(ngModel)]="user.email" id="exampleInputEmail1" placeholder="Mail Adresi Giriniz">>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="exampleInputPassword1">Şifre *</label>
+                    <input type="password" required name="password" class="form-control" formControlName="password" id="exampleInputPassword1" placeholder="Şifre Giriniz">
+                  </div>
+                </div>
+                <!-- <div class="col-md-12">
+                  <div class="form-group mb-0">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" name="terms" class="custom-control-input" id="exampleCheck1">
+                      <label class="custom-control-label" for="exampleCheck1">I agree to the <a href="#">terms of service</a>.</label>
+                    </div>
+                  </div>
+                </div> -->
+              </div>
+            </div>
+            <div class="card-footer">
+              <button type="submit" class="btn btn-primary" (click)="saveUser()">Kaydet</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      </div>
+  </section>
+</div>
