--- a/YurtYonetim-UI/yurt-yonetim/src/assets/css/adminlte.css
+++ b/YurtYonetim-UI/yurt-yonetim/src/assets/css/adminlte.css
@@ -26650,7 +26650,7 @@ body.text-sm .input-group-text {
 }
 
 .card-primary:not(.card-outline) > .card-header {
-  background-color: #007bff;
+  background-color:#565656;
 }
 
 .card-primary:not(.card-outline) > .card-header,
@@ -26659,11 +26659,11 @@ body.text-sm .input-group-text {
 }
 
 .card-primary:not(.card-outline) > .card-header a.active {
-  color: #1f2d3d;
+  color: #0c0c0c;
 }
 
 .card-primary.card-outline {
-  border-top: 3px solid #007bff;
+  border-top: 3px solid #585d62;
 }
 
 .card-primary.card-outline-tabs > .card-header a:hover {
@@ -26672,7 +26672,7 @@ body.text-sm .input-group-text {
 
 .card-primary.card-outline-tabs > .card-header a.active,
 .card-primary.card-outline-tabs > .card-header a.active:hover {
-  border-top: 3px solid #007bff;
+  border-top: 3px solid #585d62;
 }
 
 .bg-primary > .card-header .btn-tool,
@@ -27658,7 +27658,7 @@ body.text-sm .input-group-text {
 }
 
 .card-blue:not(.card-outline) > .card-header {
-  background-color: #007bff;
+  background-color: #585d62;
 }
 
 .card-blue:not(.card-outline) > .card-header,
