--- a/YurtYonetim-UI/yurt-yonetim/src/styles.scss
+++ b/YurtYonetim-UI/yurt-yonetim/src/styles.scss
@@ -1642,7 +1642,7 @@ video {
   overflow: auto;
   overflow-x: hidden;
   z-index: 1001;
-  background: $navbar-background;
+  background: #0c0c0c;
   box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
   transition: left 0.3s ease, width 0.3s ease;
 
@@ -1685,7 +1685,7 @@ video {
     top: 0;
     left: 0;
     line-height: 56px;
-    background: #2a2a2e;
+    background: #0c0c0c;
     transition: left 0.3s ease, width 0.3s ease;
     width: 255px;
 
@@ -1823,7 +1823,7 @@ video {
   .active>ul {
     max-height: 0;
     overflow-y: hidden;
-    background: $navbar-background;
+    background: #0c0c0c;
     -webkit-transition: max-height 0.4s ease-in-out;
     -moz-transition: max-height 0.4s ease-in-out;
     -o-transition: max-height 0.4s ease-in-out;
